samples/_failures_safe/1761609550_6c1513_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a119caaa.c: In function ‘main’:
./samples/SAFE/__tmp_a119caaa.c:160:12: error: missing terminating " character
  160 |     printf("\
      |            ^~
./samples/SAFE/__tmp_a119caaa.c:160:5: error: expected expression at end of input
  160 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_a119caaa.c:160:5: error: expected declaration or statement at end of input
